# servant-static-header

./: stack.yaml
servant-client-static-header/: README.md  servant-client-static-header.cabal
servant-client-static-header/src/Servant/StaticHeader/: Client.hs
servant-client-static-header/test/: Spec.hs
servant-server-static-header/: README.md  servant-server-static-header.cabal
servant-server-static-header/src/Servant/StaticHeader/: Server.hs
servant-static-header/: README.md  servant-static-header.cabal
servant-static-header/src/Servant/: StaticHeader.hs
