name:                servant-server-static-header
version:             0.1.0.0
synopsis:            A combinator for headers that have known values at compile time
description:         Please see README.md
homepage:            https://github.com/mchaver/servant-static-header#readme
license:             BSD3
license-file:        LICENSE
author:              James M.C. Haver II
maintainer:          mchaver@gmail.com
copyright:           2016 James M.C. Haver II 
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Servant.StaticHeader.Server
  build-depends:       base >= 4.7 && < 5
                     , servant-server
                     , servant-static-header
                     , text
                     , wai
  default-language:    Haskell2010

test-suite servant-server-static-header-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , servant-server-static-header
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mchaver/servant-static-header
